public/css/styles.css
/* ... */
.dashboard-health-id-div {
  height: 100%;
  width: 30px;

  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;

  display: flex;
  flex-direction: column;

  justify-content: center;

  align-items: center;

  filter: brightness(0);
  -webkit-filter: brightness(0);
}

.dashboard-health-id-div span {
  transform: rotate(-90deg);
  width: 150px;
  font-weight: 500;
}
.dashboard-health-id-icon {
  position: relative;
  bottom: -55px;
  height: 20px;
  width: 20px;

  float: right;
}

.dashboard-offcanvas {
  background-color: rgb(255, 255, 255);
  backdrop-filter: blur(10px);

  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.dashboard-offcanvas-backdrop {
  backdrop-filter: blur(3px);
  position: fixed;
  height: 100%;
  width: 100%;
  z-index: -3;

  border: none;

  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.dashboard-offcanvas-header{
  border-bottom: rgba(124, 124, 124, 0.555) solid 1px;
}

.dashboard-offcanvas-title{
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  letter-spacing: 2px;
}

.dashboard-dropdown-arrow {
  content: "";
  background: url("../images/arrow-down.svg");
  background-size: contain;
  background-repeat: no-repeat;

  position: absolute;
  height: 24px;
  width: 24px;
  right: 5px;
  top: 6px;

  z-index: -1;
}

.dashboard-dropdown {
  width: 100%;
}

.dashboard-dropdown-background {
  background-color: rgb(255, 255, 255);
  height: 100%;

  position: absolute;

  z-index: -2;
}

.dashboard-dropdown-btn {
  text-align: left;
  background: transparent;

  color: #000000;
}

.dashboard-dropdown-btn:hover {
  background: transparent;
}

.dashboard-dropdown-btn:focus {
  background: transparent;
}

.dashboard-health-id-search-result {
  padding-top: 20px;
}

.dashboard-search-health-id-table {
  width: 100%;

  box-shadow: 1px 2px 10px rgba(115, 116, 117, 0.616);

  border-radius: 10px;
}

.dashboard-search-health-id-table th,
.dashboard-search-health-id-table td {
  background-color: #006aff8c;

  padding: 10px;
}

.dashboard-search-health-id-table .dashboard-last-row {
  border-bottom: rgba(0, 0, 0, 0.534) solid 1px;
}

.dashboard-search-health-id-table tr:last-child th:first-child {
  border-bottom-left-radius: 10px;
}

.dashboard-search-health-id-table tr:last-child td:last-child {
  border-bottom-right-radius: 10px;
}

.dashboard-search-health-id-table tr:first-child th:first-child {
  border-top-left-radius: 10px;
}

.dashboard-search-health-id-table tr:first-child td:last-child {
  border-top-right-radius: 10px;
}

.dashboard-search-health-id-table tr:last-child {
  border: none;
}

/*sub divisions styles--------------------------*/
.sub-division {
  padding-right: 15px;
  margin: 0;
  float: right;
  right: 0;
  height: 100%;
  width: 79%;

  margin: 5px;

  padding-right: 30px;

  transition: all 0.2s ease-in-out;
}

.sub-division-user {
  width: 81%;
}

@media screen and (max-width: 1200px) {
  .sub-division {
    width: 94%;
    position: relative;
    left: 70px;
  }
}
/*data management division styles---------------*/
.data-heading {
  border-bottom: black 2px solid;
}
.data-search-bar {
  padding-top: 2%;
  padding-bottom: 4%;
}
.data-table {
  border-top: grey 1px solid;
  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-bottom: grey 1px solid;
  font-size: 14px;
}
.data-edit {
  font-size: 20px;
}
.data-delete {
  padding-top: 2px;
}
.division-maximized {
  width: 95%;

  transition: all 0.2s ease-in-out;
}
.data-edit-button {
  font-size: 20px;
  padding: 0;
}
.data-select-li {
  margin: 10px 1px;
  padding: 5px;
  line-height: 25px;
  font-size: 15px;
  border: rgba(0, 0, 0, 0.19) solid 1px;
  text-decoration: none;
  color: black;
  text-align: left;
}

/*Settings sub division*/
.settings-heading {
  background-color: rgba(255, 255, 255, 0);
  width: 100%;
}
.settings-body {
  margin-top: 50px;
}
.settings-navigation {
  padding-top: 60px;
}
.settings-info-link,
.settings-password-link {
  border-bottom: rgba(10, 84, 180, 0.747) solid 1px;
}
.settings-info-link a,
.settings-password-link a {
  text-decoration: none;
  padding: 10px;
  color: black;
}
.settings-arrow {
  position: relative;
  top: 20px;
  left: 150px;
}
.settings-info {
  border: grey solid 1px;

  background-color: rgba(131, 209, 240, 0.671);
  backdrop-filter: 10px;

  border-radius: 10px;
  padding: 35px;
  margin: 50px;
}
.settings-info-element {
  margin: 15px 0 15px 0;
}

.settings-sub-div-title {
  background-color: #0d6dfd88 !important;
  color: #000000 !important;

  border: #0058d4c4 solid 1px !important;

  font-weight: 600;
}

.settings-sub-div-title-section {
  border-bottom-color: #0058d4c4 !important;
}

#same-password,
#matching-passwords {
  color: red;
}
#old_password {
  margin-bottom: 50px;
}
/*DEO subdivision related*/

.deo-manage-rm-btn {
  border-width: 0;
  background-color: transparent;
}

.deo-manage-new-deo-form {
  height: auto;
  width: 60%;
  background-color: white;
  position: absolute;
  top: 25%;
  left: 25%;
  border-radius: 25px;
  padding: 30px;
}

.bg-blur {
  filter: blur(8px);
  -webkit-filter: blur(8px);
}

/* registration form styles -------------------------------*/

.register-container {
  height: 100%;
  position: relative;
}

.register-wrapper {
  height: auto;
  width: 40%;
  background-color: rgba(253, 254, 255, 0.801);
  backdrop-filter: blur(8px);
  color: rgb(0, 0, 0);

  border: #00000036 solid 1px;

  position: absolute;
  top: 10%;
  left: 30%;
  border-radius: 25px;
  padding: 30px;
}

.register-verification-wrapper {
  height: auto;
  width: 30%;
  background-color: white;
  position: absolute;
  top: 20%;
  left: 35%;
  border-radius: 25px;
  padding: 30px;
}

.register-email-img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 30%;
  width: 30%;
}
/* ... */

